@@ -51,6 +51,8 @@
      declared types exactly.  Specializations are matched from first to
      last to resolve ambiguities (#1214).
   - Compiler rewrites for char{<,>,<=,>=,=}? are now safe (#1122).
+  - When requesting to emit import libraries that don't exist, the
+     compiler now gives an error instead of quietly continuing (#1188).
 
 - Core libraries
   - Irregex has been updated to 0.9.4, which fixes severe performance
